select multiple cards of the same rank
also:
- auto ack for SkipTurn
- SkipTurn is considered a turn
- Reorg card selection mapping to server indicies

--- a/src/CardDisplay.module.css
+++ b/src/CardDisplay.module.css
@@ -4,7 +4,19 @@
   border-radius: 5px;
 }
 
+.disabled {
+  border: 1px solid red;
+  cursor: not-allowed;
+  color: red;
+}
+
 .card {
+  padding: 10px;
+  margin: 5px;
+  width: 8em;
+}
+
+.overlay {
   padding: 10px;
   margin: 5px;
   width: 8em;
